<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ventana_emergencias">

    <ImageButton
        android:id="@+id/ib_policia"
        android:layout_width="146dp"
        android:layout_height="134dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/Descripcion"
        android:onClick="BtnsPolicia"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/police" />

    <ImageButton
        android:id="@+id/ib_ambulancia"
        android:layout_width="147dp"
        android:layout_height="138dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/Descripcion"
        android:onClick="BtnsAmbulancia"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_policia"
        app:srcCompat="@drawable/ambulance" />

    <ImageButton
        android:id="@+id/ib_bomberos"
        android:layout_width="144dp"
        android:layout_height="122dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/Descripcion"
        android:onClick="BtnsBomberos"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_ambulancia"
        app:srcCompat="@drawable/firefighter" />

    <ImageButton
        android:id="@+id/ib_grua"
        android:layout_width="163dp"
        android:layout_height="106dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="360dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/Descripcion"
        android:onClick="BtnsGrua"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"
        app:srcCompat="@drawable/grua" />

    <Button
        android:id="@+id/btn_policia"
        android:layout_width="312dp"
        android:layout_height="58dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="148dp"
        android:onClick="BtnsPolicia"
        android:text="@string/btn_policia"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/ib_policia"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_ambulancia"
        android:layout_width="385dp"
        android:layout_height="63dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="132dp"
        android:onClick="BtnsAmbulancia"
        android:text="@string/btn_ambulancia"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/ib_ambulancia"
        app:layout_constraintTop_toBottomOf="@+id/btn_policia" />

    <Button
        android:id="@+id/btn_salir"
        android:layout_width="353dp"
        android:layout_height="58dp"
        android:layout_marginStart="728dp"
        android:layout_marginTop="156dp"
        android:onClick="Salir"
        android:text="Salir"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/ib_bomberos"
        app:layout_constraintTop_toBottomOf="@+id/btn_ambulancia" />

    <Button
        android:id="@+id/btn_bomberos2"
        android:layout_width="353dp"
        android:layout_height="58dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="152dp"
        android:onClick="BtnsBomberos"
        android:text="@string/btn_bomberos"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/ib_bomberos"
        app:layout_constraintTop_toBottomOf="@+id/btn_ambulancia" />

    <Button
        android:id="@+id/btn_grua"
        android:layout_width="304dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="BtnsGrua"
        android:text="@string/btn_grua"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <TextView
        android:id="@+id/txt_menuEmergencias"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_SolcitacionEmergencias"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_noSolicitarMal"
        android:layout_width="809dp"
        android:layout_height="47dp"
        android:text="@string/txt_noAbusar"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_menuEmergencias" />

</androidx.constraintlayout.widget.ConstraintLayout>